API integration implemented on vechilcle

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,6 +11,12 @@
         <h3 routerLink="direct">Directives</h3>
         <h3 routerLink="pipe">Pipes</h3>
         <h3 routerLink="register">Registration</h3>
+        <h3 routerLink="flip">Flipkart</h3>
+        <h3 routerLink="vec">Vehicle</h3>
+        <h3 routerLink="act">Accouts</h3>
+        <h3 routerLink="mail">Mails</h3>
+        <h3 routerLink="create">Create Vehicle</h3>
+        <h3 routerLink="created">Create Account</h3>
         <button routerLink="/login">LOGOUT</button>
     </div>
     <div class="right"></div>
