page Communication implemented

--- a/src/app/accouts/accouts.component.html
+++ b/src/app/accouts/accouts.component.html
@@ -45,6 +45,8 @@
             <td>{{accout.id}}</td>
             <td>
                 <button (click)="delete(accout.id)">Delete</button>
+                <button routerLink="/dashboard/account_view">view</button>
+                <button>edit</button>
             </td>
         </tr>
     </tbody>
