--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -1,19 +1,19 @@
 <h1>Create ACCOUNTS FORM</h1>
-<form>
-    <label>Account Name:</label>
-    <input type="text">
+<form [formGroup]="accountForm">
+    <label>AccountName:</label>
+    <input type="text" formControlName="account_name">
     <br>
-    <label>Avalible Balance:</label>
-    <input type="text">
+    <label>Balance:</label>
+    <input type="text" formControlName="available_balance">
     <br>
-    <label>ACCOUNT NUMBER :</label>
-    <input type="text">
+    <label>ACCOUNTN0 :</label>
+    <input type="text" formControlName="account_number">
     <br>
     <label>City:</label>
-    <input type="text">
+    <input type="text" formControlName="city">
     <br>
-    <label>profile-picture </label>
-    <input type="text">
+    <label>profile</label>
+    <input type="text" formControlName="profile-picture">
     <br>
     <button (click)="submit()">Submit</button>
 
