--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,8 +17,11 @@
         <h3 routerLink="mail">Mails</h3>
         <h3 routerLink="create">Create Vehicle</h3>
         <h3 routerLink="created">Create Account</h3>
+        <h3 routerLink="parent">Parent</h3>
+        <h3 routerLink="calcul">Calculator</h3>
+        <h3 routerLink="about">Company</h3>
    
-        <button routerLink="/login">LOGOUT</button>
+        <button (click)="logout()">LOGOUT</button>
     </div>
     <div class="right"></div>
     <router-outlet></router-outlet>
